Add network option

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 DOWNLOADS_PATH=./data/downloads
 MOVIES_PATH=./data/movies
 TVSHOWS_PATH=./data/tvshows
+MEDIA_NETWORK_NAME=media-network
+MEDIA_NETWORK_EXTERNAL=false
