add password to transmission

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ MOVIES_PATH=./data/movies
 TVSHOWS_PATH=./data/tvshows
 MEDIA_NETWORK_NAME=media-network
 MEDIA_NETWORK_EXTERNAL=false
+TRANSMISSION_RPC_USERNAME=transmission
+TRANSMISSION_RPC_PASSWORD=transmission
+TRANSMISSION_RPC_AUTHENTICATION_REQUIRED=true
