--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,6 +85,8 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=Etc/UTC
+    env_file:
+      - .env
     volumes:
       - ./data/transmission/config:/config
       - downloads:/downloads
