--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,9 @@ services:
       - ./data/jellyfin/config:/config
       - movies:/movies
       - tvshows:/tvshows
-    # ports:
+    ports:
+      - "1900:1900/udp" # DLNA/UPnP SSDP
+      - "7359:7359/udp" # Jellyfin Client Discovery
     #   - 8096:8096
     #   - 8920:8920
     restart: unless-stopped
@@ -85,9 +87,8 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=Etc/UTC
-      - TRANSMISSION_RPC_USERNAME=${TRANSMISSION_RPC_USERNAME}
-      - TRANSMISSION_RPC_PASSWORD=${TRANSMISSION_RPC_PASSWORD}
-      - TRANSMISSION_RPC_AUTHENTICATION_REQUIRED=${TRANSMISSION_RPC_AUTHENTICATION_REQUIRED}
+      - USER=${TRANSMISSION_RPC_USERNAME}
+      - PASS=${TRANSMISSION_RPC_PASSWORD}
     volumes:
       - ./data/transmission/config:/config
       - downloads:/downloads
